--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		<button class="full-screen" onclick="$(document).toggleFullScreen()"></button>
 		<div id="logo">Ensemble 16</div>
 		<section class="content show" id="home">
-			<h1>Coming soon!</h1>
+			<h1 class="headerss">Coming soon!</h1>
 			<h5>Freedom+Innovation</h5>
-			<p class="descr">We, the students of Computer Science and Engg. Dept of Govt.RIT are proud to present ENSEMBLE'12, a National Level Techno-management fest Inspired by the huge success of the previous editions conducted in 2007,2008 and 2009. The event will be an arena to showcase the talent of budding technocrats. The event focused on school students, undergraduate, postgraduate and people from all sections of society, aim to bridge the gap between Technical advancement and common man. We also arrange awareness programs to the school students about recent innovations in the evolution of computing</p>
+			<p class="descr">We, the students of Computer Science and Engg. Dept of Govt.RIT are proud to present ENSEMBLE'16, a National Level Techno-management fest Inspired by the huge success of the previous editions conducted in 2007,2008 and 2009. The event will be an arena to showcase the talent of budding technocrats. The event focused on school students, undergraduate, postgraduate and people from all sections of society, aim to bridge the gap between Technical advancement and common man. We also arrange awareness programs to the school students about recent innovations in the evolution of computing</p>
 			
 		</section>
 		<!-- Background Slides -->
