--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						</div>
 						<div class="col-sm-6 text-center-xs">
 							<p class="lead"><br><b>Freedom + Innovation</b><br>
-							Computer Scoence and Engineering<br/>
+							Computer Science and Engineering<br/>
 							Rajiv Gandhi Institute of Technology
 							</p>
 						</div>
