--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div class="col-sm-12 text-center">
 							<h6><br></h6>
 							<h3>What's Ensemble 16</h3>
-							<p class="lead">Computer Science and Engg & MCA Dept of Govt.RIT presents ENSEMBLE'16, a Techno fest Inspired by the huge success of the previous editions conducted in 2007,2008 and 2009. The event will be an arena to showcase the talent of budding technocrats.</p>
+							<p class="lead">Computer Science and Engg &amp; MCA Dept of Govt.RIT presents ENSEMBLE'16, a Techno fest Inspired by the huge success of the previous editions conducted in 2007,2008 and 2009. The event will be an arena to showcase the talent of budding technocrats.</p>
 						</div>
 					</div>
 				</div>
