--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 									<p class="lead">
 										Calling all hardcore gamers!
 									</p>
-									<a class="btn btn--sm vpe" href="events/apocalypse.html">
+									<a class="btn btn--sm vpe" href="events/apoclypse.html">
 										<span class="btn__text">
 											View Event
 										</span>
@@ -424,6 +424,19 @@
 												<div class="card__title">
 													<h5>Expert Lectures</h5>
 													Learn from experts of the industry
+												</div>
+											</div>
+										</div>
+									</a>
+									<a>
+										<div class="card card-4">
+											<div class="card__image">
+												<img alt="Pic" src="images/mrrit.jpg">
+											</div>
+											<div class="card__body boxed boxed--sm bg--white">
+												<div class="card__title">
+													<h5>Mr.RIT</h5>
+													Finding the fittest man of RIT
 												</div>
 											</div>
 										</div>
