--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 											</div>
 										</div>
 									</a>
-									<a>
+									<a href="events/mrrit.html">
 										<div class="card card-4">
 											<div class="card__image">
 												<img alt="Pic" src="images/mrrit.jpg">
