--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 											</div>
 										</div>
 									</a>
-									<a>
+									<a href="events/run.html">
 										<div class="card card-4">
 											<div class="card__image">
 												<img alt="Pic" src="images/run.jpg">
